@@ -1,3 +1,8 @@
+2014-11-28  Jiong Wang  <jiong.wang@arm.com>
+
+	* gcc.target/arm/copysign_softfloat_1.c: New copysign/copysignf
+	testcase for soft-float.
+
 2014-11-28  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gcc.target/i386/pr63661.c: Replace -mtune=native with
